crates/mermaid-text/tests/snapshots/snapshots__perpendicular_subgraph_direction.snap
---
source: crates/mermaid-text/tests/snapshots.rs
assertion_line: 186
expression: out
---
   ┌───┐       ┌─────┐
   │ A │──────▸│ Sub │
 ╭─└ub─┘─╮     └─────┘
 │       │
 │ ┌───┐ │
 │ │ X │││
 │ └───┘││
 │      ││
 │┌─────┘│
 ││┌───┐ │
 │▸│ Y │││
 │ └───┘││
 │      ││
 │┌─────┘│
 ││┌───┐ │
 │▸│ Z │ │
 │ └───┘ │
 │       │
 ╰───────╯
