crates/mermaid-text/tests/snapshots/snapshots__sequence_minimal.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐         ┌──────┐
 │  A   │         │  B   │
 └──────┘         └──────┘
     ┆ hello          ┆
     ─────────────────▸
     ┆ hi back        ┆
     ◂┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
     ┆                ┆
