crates/mermaid-text/tests/snapshots/snapshots__sequence_with_alt_else_block.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐      ┌──────┐
 │  A   │      │  B   │
 └──────┘      └──────┘
     ┆             ┆
╔═[alt: success]════════╗
║    ┆ ok          ┆    ║
║    ──────────────▸    ║
║    ┆             ┆    ║
╠┄[failure]┄┄┄┄┄┄┄┄┄┄┄┄┄╣
║    ┆ fail        ┆    ║
║    ──────────────▸    ║
║    ┆             ┆    ║
╚═══════════════════════╝
     ┆             ┆
