crates/mermaid-text/tests/snapshots/snapshots__sequence_with_autonumber.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌────────┐                ┌───────┐
 │  User  │                │  API  │
 └────────┘                └───────┘
      ┆ [1] POST /order        ┆
      ─────────────────────────▸
      ┆ [2] 201 Created        ┆
      ◂─────────────────────────
      ┆ [3] GET /order/123     ┆
      ─────────────────────────▸
      ┆ [4] 200 OK             ┆
      ◂─────────────────────────
      ┆                        ┆
