crates/mermaid-text/tests/snapshots/snapshots__sequence_with_inline_call_reply_activation.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌────────┐             ┌───────┐            ┌──────┐
 │  User  │             │  API  │            │  DB  │
 └────────┘             └───────┘            └──────┘
      ┆ POST /login         ┃                    ┆
      ──────────────────────▸                    ┆
      ┆                     ┃ SELECT user        ┃
      ┆                     ─────────────────────▸
      ┆                     ┃ user record        ┃
      ┆                     ◂┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
      ┆ 200 + token         ┃                    ┆
      ◂┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄                    ┆
      ┆                     ┆                    ┆
 ┌────────┐             ┌───────┐            ┌──────┐
 │  User  │             │  API  │            │  DB  │
 └────────┘             └───────┘            └──────┘
