crates/mermaid-text/tests/snapshots/snapshots__sequence_with_multiline_note.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌────────┐             ┌───────┐
 │  User  │             │  API  │
 └────────┘             └───────┘
      ┆ POST /audit         ┆
      ──────────────────────▸
      ┆                     ┆
      ┆ ╭─────────────────╮ ┆
      ┆ │ audit log entry │ ┆
      ┆ │ recorded async  │ ┆
      ┆ ╰─────────────────╯ ┆
      ┆                     ┆
