crates/mermaid-text/tests/snapshots/snapshots__sequence_with_nested_activations.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐             ┌──────┐
 │  A   │             │  B   │
 └──────┘             └──────┘
     ┆ outer call         ┆
     ─────────────────────▸
     ┆ inner call         ┃
     ─────────────────────▸
     ┆ inner reply        ┃
     ◂─────────────────────
     ┆ outer reply        ┃
     ◂─────────────────────
     ┆                    ┆
 ┌──────┐             ┌──────┐
 │  A   │             │  B   │
 └──────┘             └──────┘
