crates/mermaid-text/tests/snapshots/snapshots__sequence_with_nested_loop_alt.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐   ┌──────┐
 │  A   │   │  B   │
 └──────┘   └──────┘
     ┆          ┆
╔═[loop: outer]══════╗
║    ┆          ┆    ║
╔═[alt: branch a]════╗
║    ┆ a        ┆    ║
║    ───────────▸    ║
║    ┆          ┆    ║
╠┄[branch b]┄┄┄┄┄┄┄┄┄╣
║    ┆ b        ┆    ║
║    ───────────▸    ║
║    ┆          ┆    ║
╚════════════════════╝
║    ┆          ┆    ║
╚════════════════════╝
     ┆          ┆
